--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,319 @@
-/* место для вашего кода */
+body {
+  font-family: Raleway, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  border-bottom: 1px solid;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  padding: 88px 50px;
+  font-size: 18px;
+  width: 100%;
+}
+
+.header_menu {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 34px;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link_active {
+  text-decoration: none;
+  border-width: 0;
+}
+
+.header__links-list-item {
+  list-style: circle;
+}
+
+.header_logo {
+  text-decoration: none;
+  border-width: 0;
+}
+
+.header_logo-image {
+  width: 136px;
+  height: 112px;
+}
+
+.address {
+  font-style: normal;
+  line-height: 24px;
+  font-size: 18px;
+}
+
+.header__address {
+  width: 240px;
+  height: 98px;
+  margin-top: -8px;
+  justify-self: end;
+}
+
+.main {
+  width: 1100px;
+}
+
+.cover {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  width: 100%;
+  height: 757px;
+  position: relative;
+  color: #ffffff;
+  background-position: center;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  opacity: 60%;
+  background-color: #000000;
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+}
+
+.cover__title {
+  font-size: 100px;
+  text-transform: uppercase;
+  z-index: 1;
+  padding: 165px 50px 100px;
+  letter-spacing: 30px;
+}
+
+.aligned-text {
+  font-weight: 700;
+  font-size: 100%;
+  letter-spacing: 30px;
+}
+
+.aligned-text_center {
+  display: flex;
+  justify-content: center;
+  margin-right: -30px;
+  margin-top: 18px;
+}
+
+.aligned-text_right {
+  display: flex;
+  justify-content: end;
+  margin-right: -30px;
+  margin-top: 18px;
+}
+
+.description {
+  display: flex;
+  width: 100%;
+  z-index: 1;
+  justify-content: space-between;
+  font-size: 22px;
+  line-height: 28px;
+  padding: 0 50px 55px;
+  align-items: center;
+}
+
+.cover__description-text {
+  line-height: 28px;
+  word-spacing: 18px;
+  text-transform: uppercase;
+}
+
+.bet-button {
+  text-transform: uppercase;
+  background: none;
+  border: 1px solid white;
+  color: white;
+  padding: 10px 32px;
+}
+
+.lots {
+  margin: 180px 24px 0px;
+}
+
+.lots__heading {
+  width: 121px;
+  height: 47px;
+  font-size: 40px;
+  text-transform: uppercase;
+  font-weight: 700px;
+  margin: 26px 40px;
+}
+
+.lots__card-list {
+  display: flex;
+  gap: 25px;
+  list-style: none;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.lots__card-list-item {
+  position: relative;
+  width: 334px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card {
+  position: relative;
+  padding: 48px 40px;
+  background-position: center;
+  line-height: 120%;
+  background-size: cover;
+  height: 596px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card__title {
+  font-size: 22px;
+  text-transform: uppercase;
+  font-weight: 700;
+  line-height: 120%;
+  color: #ffffff;
+  position: relative;
+}
+
+.card__title span {
+  border-bottom: 1px solid;
+}
+
+.card__text {
+  font-size: 20px;
+  color: white;
+  line-height: 24px;
+  position: relative;
+}
+
+.lots__look-more-link {
+  width: 192px;
+  height: 25px;
+  font-size: 20px;
+  text-decoration: underline;
+  margin: 30px 40px;
+}
+
+.about {
+  margin: 146px 24px 0px;
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  gap: 25px;
+}
+
+.about__column {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  background-color: black;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px 47px;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 100%;
+  margin: 110px 0 105px;
+}
+
+.about__text {
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 400;
+}
+
+.about__text p {
+  margin-bottom: 22px;
+}
+
+.footer {
+  height: 180px;
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: flex-start;
+  margin-top: 160px;
+  padding: 0px 50px;
+}
+
+.footer__menu {
+  width: 164px;
+}
+
+.footer__menu-list {
+  list-style: none;
+  font-size: 18px;
+}
+
+.footer__menu-list-item {
+  justify-self: center;
+}
+
+.footer__menu-link_active {
+  border-width: 0;
+}
+
+.footer__social-list {
+  display: flex;
+  justify-content: end;
+  gap: 48px;
+  list-style: none;
+}
+
+.footer__social-link {
+  border-width: 0;
+}
+
+.footer__social-icon {
+  width: 48px;
+  height: 48px;
+}
