--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Raleway, sans-serif;
 }
 
-a {
+.header__link {
   text-decoration: none;
   border-bottom: 1px solid;
 }
@@ -18,12 +18,12 @@ a {
 
 .header_menu {
   display: flex;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .header__links-list {
   display: flex;
-  gap: 34px;
+  gap: 33px;
 }
 
 .header__links-list-item_no-bullit {
@@ -57,8 +57,8 @@ a {
 
 .header__address {
   width: 240px;
-  height: 98px;
-  margin-top: -8px;
+  min-height: 98px;
+  margin-top: 0px;
   justify-self: end;
 }
 
@@ -73,7 +73,7 @@ a {
   background-image: url(../images/cover.jpg);
   background-size: cover;
   width: 100%;
-  height: 757px;
+  min-height: 757px;
   position: relative;
   color: #ffffff;
   background-position: center;
@@ -138,18 +138,19 @@ a {
 .bet-button {
   text-transform: uppercase;
   background: none;
-  border: 1px solid white;
+  border: 1px solid currentColor;
   color: white;
   padding: 10px 32px;
 }
 
 .lots {
   margin: 180px 24px 0px;
+  min-height: 723px;
 }
 
 .lots__heading {
   width: 121px;
-  height: 47px;
+  min-height: 47px;
   font-size: 40px;
   text-transform: uppercase;
   font-weight: 700px;
@@ -162,6 +163,7 @@ a {
   list-style: none;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-bottom: 28px;
 }
 
 .lots__card-list-item {
@@ -178,10 +180,11 @@ a {
   background-position: center;
   line-height: 120%;
   background-size: cover;
-  height: 596px;
+  min-height: 596px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-style: normal;
 }
 
 .card_type_film {
@@ -222,9 +225,7 @@ a {
 
 .lots__look-more-link {
   width: 192px;
-  height: 25px;
   font-size: 20px;
-  text-decoration: underline;
   margin: 30px 40px;
 }
 
@@ -277,7 +278,7 @@ a {
 }
 
 .footer {
-  height: 180px;
+  min-height: 180px;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   align-items: flex-start;
@@ -298,8 +299,13 @@ a {
   justify-self: center;
 }
 
+.footer__menu-link {
+
+}
+
 .footer__menu-link_active {
   border-width: 0;
+  text-decoration: none;
 }
 
 .footer__social-list {
