--- a/styles/style.css
+++ b/styles/style.css
@@ -275,7 +275,7 @@
   grid-template-columns: 1fr min-content 1fr;
   align-items: flex-start;
   margin-top: 160px;
-  padding: 0px 50px;
+  padding: 0px 50px 82px;
 }
 
 .footer__menu {
